chore: Scala 2.12からScala 3.3.7(LTS)に移行
主な変更点:
- Scala 2.12.20 → 3.3.7 (LTS)
- json4s 4.0.7 → 4.1.0-M8 (Scala 3のcase classシリアライゼーション対応)
- scala-ulid → ulid-creator (Java実装、Scala 3非対応のため)
- scalacache → Jedis直接利用 (Scala 3非対応のため)
- accord-core → 自前のValidator実装 (メンテナンス終了のため)
- scalamock 6.0.0-M2 → 7.3.1
- mockito-4-6 → mockito-5-12
- sbt-assembly 1.2.0 → 2.1.1
- sbt-scoverage 2.0.9 → 2.0.10
- sbt-scalafmt 2.4.6 → 2.5.6
- Slickエンティティの.tupled/.unapply → .mapTo[T]
- ScalaMockのeta展開構文をScala 3互換に修正
- scalafmt dialectをscala3に変更

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>