@@ -1,13 +1,11 @@
-val Scala213Version = "2.13.16"
-val Scala212Version = "2.12.20"
+val Scala3Version = "3.3.7"
 
 // for scala libraries
 val ScalatraVersion = "3.1.2"
 val SlickVersion = "3.6.1"
-val ScalaCacheVersion = "0.28.0"
 val SttpVersion = "4.0.9"
-val Json4sVersion = "4.0.7"
-val ULIDVersion = "1.0.24"
+val Json4sVersion = "4.1.0-M8"
+val JedisVersion = "5.2.0"
 
 // for java libraries
 val SLF4JVersion = "2.0.17"
@@ -24,7 +22,7 @@ val PostgresVersion = "42.7.7"
 val ServletAPIVersion = "6.1.0"
 val H2Version = "2.3.232"
 
-ThisBuild / scalaVersion := Scala212Version
+ThisBuild / scalaVersion := Scala3Version
 ThisBuild / organization := "jp.ijufumi"
 ThisBuild / pomIncludeRepository := { _ =>
   false
@@ -40,8 +38,8 @@ lazy val root = (project in file("."))
       "org.scalatra" %% "scalatra-json-jakarta" % ScalatraVersion,
       "org.scalatra" %% "scalatra-forms-jakarta" % ScalatraVersion,
       "org.scalatra" %% "scalatra-scalatest-jakarta" % ScalatraVersion % "test",
-      "org.scalamock" %% "scalamock" % "6.0.0-M2" % "test",
-      "org.scalatestplus" %% "mockito-4-6" % "3.2.14.0" % "test",
+      "org.scalamock" %% "scalamock" % "7.3.1" % "test",
+      "org.scalatestplus" %% "mockito-5-12" % "3.2.19.0" % "test",
       "com.h2database" % "h2" % H2Version % "test",
       "ch.qos.logback" % "logback-classic" % LogbackVersion % "runtime",
       "org.slf4j" % "slf4j-api" % SLF4JVersion,
@@ -56,19 +54,18 @@ lazy val root = (project in file("."))
       "org.json4s" %% "json4s-jackson" % Json4sVersion,
       "org.json4s" %% "json4s-native" % Json4sVersion,
       "org.json4s" %% "json4s-ext" % Json4sVersion,
-      "com.wix"      %% "accord-core"    % "0.7.6",
+      "org.scala-lang" %% "scala3-staging" % Scala3Version,
       "commons-codec" % "commons-codec" % "1.15",
       "com.auth0" % "auth0" % Auth0Version,
       "com.typesafe.slick" %% "slick" % SlickVersion,
       "com.typesafe.slick" %% "slick-hikaricp" % SlickVersion,
       "com.typesafe.slick" %% "slick-testkit" % SlickVersion % "test",
-      "com.github.cb372" %% "scalacache-core" % ScalaCacheVersion exclude ("org.slf4j", "slf4j-api"),
-      "com.github.cb372" %% "scalacache-redis" % ScalaCacheVersion exclude ("org.slf4j", "slf4j-api"),
+      "redis.clients" % "jedis" % JedisVersion,
       "com.softwaremill.sttp.client4" %% "core" % SttpVersion,
       "com.softwaremill.sttp.client4" %% "json4s" % SttpVersion,
       "software.amazon.awssdk" % "s3" % AWSSDKVersion,
       "io.github.cdimascio" % "dotenv-java" % DotEnvJavaVersion,
-      "com.chatwork" %% "scala-ulid" % ULIDVersion,
+      "com.github.f4b6a3" % "ulid-creator" % "5.2.3",
       "org.jxls" % "jxls" % jXlsVersion,
       "org.jxls" % "jxls-poi" % jXlsVersion,
       "ch.qos.logback" % "logback-classic" % LogbackVersion,
@@ -77,6 +74,8 @@ lazy val root = (project in file("."))
     ),
     assembly / assemblyJarName := "open-reports-api.jar",
     assembly / mainClass := Some("JettyLauncher"),
+    Test / javaOptions += "-Dnet.bytebuddy.experimental=true",
+    Test / fork := true,
   )
 
 val dbHost = sys.env.getOrElse("DB_HOST", "localhost")
